Bug 478061 - Right click menu of the title bar doesn't stay open
Summary: Right click menu of the title bar doesn't stay open
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: decorations (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-12-04 17:39 UTC by Germain Vincent
Modified: 2024-02-15 11:43 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The "Actions supplémentaires" menu closed the very next second (1.10 MB, image/png)
2023-12-04 17:39 UTC, Germain Vincent
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Germain Vincent 2023-12-04 17:39:06 UTC
Created attachment 163853 [details]
The "Actions supplémentaires" menu closed the very next second

STEPS TO REPRODUCE
1. Right click on the title bar of any app to open the menu 
2. Get your mouse pointer to one of the secondary menus (Desktop or More actions) WITHOUT ENTERING IT
3. The secondary menu doesn't stay open more than a second and you can't look at it without entering it
4. Voilà :)

OBSERVED RESULT

The secondary menu doesn't stay open more than a second (though it does if you move your mouse inside the secondary menu)

EXPECTED RESULT

It should stay open as long as my mouse is on the menu and not close immediately

Linux/KDE Plasma: Arch Linux with Linux-zen, KDE  Plasma Beta 5.90.0
(available in About System)
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.1
Comment 1 Kai Uwe Broulik 2023-12-20 16:51:47 UTC
Re-assigning to KWin, that menu comes from KWin.
Comment 2 Axel 2024-02-05 18:53:56 UTC
Can reproduce, still happening.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.1
Kernel Version: 6.5.0-15-generic (64-bit)
Graphics Platform: Wayland
Processors: 6 × Intel® Core™ i5-9400T CPU @ 1.80GHz
Memory: 15.4 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 630
Manufacturer: HP
Product Name: HP Pavilion All-in-One 24-xa0xxx
Comment 3 Bug Janitor Service 2024-02-14 15:33:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5195
Comment 4 Bug Janitor Service 2024-02-14 16:56:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5201
Comment 5 David Edmundson 2024-02-15 10:54:04 UTC
Git commit b36894884eff05bff6121930c7468959d5b6072e by David Edmundson.
Committed on 15/02/2024 at 10:44.
Pushed by davidedmundson into branch 'master'.

wayland: Dispatch mouse events to internal windows via QWindowSystemInterface

QWindowSystemInterface goes via QGuiApplication which updates some
internal properties. Most notably QGuiApplication::lastCursorPosition
which is used by advanced menu closing behaviour.

M  +8    -6    src/input.cpp

https://invent.kde.org/plasma/kwin/-/commit/b36894884eff05bff6121930c7468959d5b6072e
Comment 6 David Edmundson 2024-02-15 11:43:35 UTC
Git commit 8becf3cd68f51c51754f16881b6bc449c16adf67 by David Edmundson.
Committed on 15/02/2024 at 11:33.
Pushed by davidedmundson into branch 'Plasma/6.0'.

wayland: Dispatch mouse events to internal windows via QWindowSystemInterface

QWindowSystemInterface goes via QGuiApplication which updates some
internal properties. Most notably QGuiApplication::lastCursorPosition
which is used by advanced menu closing behaviour.
(cherry picked from commit b36894884eff05bff6121930c7468959d5b6072e)

M  +8    -6    src/input.cpp

https://invent.kde.org/plasma/kwin/-/commit/8becf3cd68f51c51754f16881b6bc449c16adf67