wayland: Avoid Qt sloppy menu timeout paths that rely on features that fail with our QPA

Qt menus use QGuiApplicationPrivate::lastCursorPosition to determine if
the mouse is still on the menu. This fails with the kwin internal API as
all mouse events are sent directly to the relevant window and not via
QWindowSystem which is the part that updates the internal state.

As a workaround, just disable this particular menu setting.

BUG: 478061